--- a/styles/style.css
+++ b/styles/style.css
@@ -159,7 +159,7 @@ section > select{
     border-radius: 255px;
 
     height: 23px;
-    width: 20%;
+    width: 100px;
 
     display: flex;
     align-items: center;
