--- a/styles/user.css
+++ b/styles/user.css
@@ -93,7 +93,6 @@ main > section{
     margin-right: 20%;
     margin-left: 20%;
 
-    margin-top: 20px;
     height: 500px;
 
     background-color: var(--color-grey-5);
@@ -112,13 +111,15 @@ main > section > h2{
     line-height: 39px;
 }
 
-main > .section__employes{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+main > .header__company{
+    background-color: white;
+    border: none;
+    height: auto;
+    margin-top: 30px;
+
 }
 
-main > .section__employes > .div__header{
+main > .header__company > .div__header{
     display: flex;
     background-color: var(--color-brand-1);
     align-items: center;
@@ -127,7 +128,7 @@ main > .section__employes > .div__header{
     width: 100%;
 }
 
-main > .section__employes > .div__header > h2{
+main > .header__company > .div__header > h2{
     font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 700;
@@ -137,12 +138,20 @@ main > .section__employes > .div__header > h2{
     color: white;
 }
 
-main > .section__employes > .div__header > p{
+main > .header__company > .div__header > p{
     color: white;
     font-weight: 700;
     font-size: 2rem;
     margin-right: 10px;
     margin-left: 10px;
+}
+
+main > .section__employes{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between ;
+    height: auto;
 }
 
 main > .section__employes > .div__employees{
@@ -152,6 +161,8 @@ main > .section__employes > .div__employees{
 
     margin-top: 30px;
     margin-left: 30px;
+    margin-right: 10px;
+    margin-bottom: 15px;
 }
 
 main > .section__employes > .div__employees > p{
