--- a/styles/admin.css
+++ b/styles/admin.css
@@ -110,7 +110,7 @@ main > .section__top > .div__buttons > button{
     justify-content: center;
     gap: 4px;
 
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
@@ -127,6 +127,51 @@ main > .section__departaments{
     margin-top: 5px;
     overflow-y: auto;
     background-color: var(--color-grey-5);
+    display: flex;
+    overflow-y: auto;
+}
+
+main > .section__departaments > div{
+    display: flex;
+    border:  1px solid var(--color-brand-1);
+    height: 150px;
+    width: 40%;
+    justify-content: space-between;
+    margin-left: 40px;
+    margin-top: 30px;
+    background-color: white;
+}
+
+main > .section__departaments > div > span{
+    margin-top: 15px;
+    margin-left: 10px;
+}
+
+main > .section__departaments > div > span >h2{
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+
+}
+
+main > .section__departaments > div > span > p{
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+}
+
+main > .section__departaments > div > nav{
+    display: flex;
+    flex-direction: column;
+    margin-right: 5px;
+}
+
+main > .section__departaments > div > nav > img{
+    margin-top: 10px;
 }
 
 main > h2{
@@ -140,8 +185,38 @@ main > h2{
 }
 
 main > .section__register{
-    height: 300px;
+    height: 350px;
     margin-top: 5px;
     overflow-y: auto;
     background-color: var(--color-grey-5);
+    display: flex;
+    overflow-y: auto;
+    flex-wrap: wrap;
 }
+
+main > .section__register > div{
+    display: flex;
+    border:  1px solid var(--color-brand-1);
+    height: 100px;
+    width: 40%;
+    justify-content: space-between;
+    margin-left: 40px;
+    margin-top: 30px;
+    background-color: white;
+}
+
+main > .section__register > div > span{
+    margin-top: 15px;
+    margin-left: 10px;
+}
+
+main > .section__register > div > nav{
+    display: flex;
+    flex-direction: column;
+}
+
+main > .section__register > div > nav > img{
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
